feat: implementa middleware de autenticação jwt
