# controllers/get-album-by-id-controller.go
@@ -26,6 +26,7 @@ func NewGetAlbumByIDController(usecase *usecases.GetAlbumByIDUsecase) *GetAlbumB
 // @Param        id   path      string  true  "ID do álbum que será buscado"
 // @Success      200  {object}  entities.Album "Álbum encontrado"
 // @Router       /albums/{id} [get]
+// @Security BearerAuth
 func (controller *GetAlbumByIdController) Handle(c *gin.Context) {
 	id := c.Param("id")
 	album, err := controller.GetAlbumByIDUsecase.Execute(id)
